--- a/src/Components/SignUp/style.css
+++ b/src/Components/SignUp/style.css
@@ -7,12 +7,11 @@
   width: 642px;
   padding: 62px 0 0 89px;
   background-image: url(../../assets/controler.png);
-
 }
-.signUp .logo svg path  {
-  fill: #FFF;
+.signUp .logo svg path {
+  fill: #fff;
 }
-.signUp .logo{
+.signUp .logo {
   width: 106px;
 }
 .Name {
@@ -29,6 +28,7 @@
   padding: 82px 0 0 75px;
 }
 /* the second section */
+/* the" < back" button  */
 .back {
   display: flex;
   align-items: center;
@@ -52,7 +52,7 @@
   width: 415px;
   font-weight: 400;
   font-size: 18px;
-  color: #8692A6;
+  color: #8692a6;
 }
 
 .main form {
@@ -76,9 +76,28 @@
   border-radius: 6px;
   position: relative;
 }
-.main form input[type = 'checkbox'] {
+.main form input[type="checkbox"] {
   width: 18px;
 }
-.main form label[ htmlFor="checkbox" ]{
+/* .main form label[ htmlFor="checkbox" ]{
 
+} */
+
+.main form + div {
+  margin-left: 210px;
+  margin-top: 10px;
+}
+.google {
+  width: 426px;
+  height: 64px;
+  background: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
+  border-radius: 6px;
+  border: none;
+  margin-bottom: 37px;
+  font-weight: 500;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
