--- a/src/Components/SignUp/style.css
+++ b/src/Components/SignUp/style.css
@@ -78,10 +78,12 @@
 }
 .main form input[type="checkbox"] {
   width: 18px;
+  margin: 0px 10px 0 0;
 }
-/* .main form label[ htmlFor="checkbox" ]{
-
-} */
+.main form label[for="checkbox"]{
+  display: flex;
+  align-items: center;
+}
 
 .main form + div {
   margin-left: 210px;
