--- a/src/Components/button/style.css
+++ b/src/Components/button/style.css
@@ -1,8 +1,10 @@
-.button {
-  height: 64px;
+.submit {
+  text-align: center;
+  text-decoration: none;
   padding: 23px;
   background: #1565d8;
   color: #fff;
   border-radius: 6px;
   border: none;
+  cursor: pointer;
 }
