--- a/src/index.css
+++ b/src/index.css
@@ -86,10 +86,24 @@ body {
 }
 
 .signUp section:first-of-type {
+  position: relative;
   color: white;
   width: 642px;
   padding: 62px 0 0 89px;
   background-image: url(./assets/controler.png);
+}
+.signUp section:first-of-type > *:not(div.filter){
+  position: relative;
+  z-index: 2;
+}
+.signUp section:first-of-type .filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #1565d8;
+  opacity: 0.9; 
+  margin: -62px 0 0 -89px; ;
+  z-index: 1;
 }
 .signUp .logo svg path {
   fill: #fff;
@@ -158,4 +172,5 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  cursor: pointer;
 }
