Fixing and refacturing

--- a/src/index.css
+++ b/src/index.css
@@ -230,7 +230,7 @@ hr {
   text-align: end;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   column-gap: 22px;
   padding-right: 40px;
 }
